fix waybar wrong color when charging

--- a/dot_config/waybar/private_style.css
+++ b/dot_config/waybar/private_style.css
@@ -68,7 +68,7 @@ label {
     background-color: @sapphire;
 }
 
-#battery.plugged {
+#battery.plugged, #battery.charging {
     background-color: @green;
 }
 
